--- a/style.css
+++ b/style.css
@@ -7,10 +7,29 @@ body {
 }
 
 .box {
+    background-color: #D9D9D9;
+    height: 100px;
+    width: 100px;
     border-style: solid;
+    border-color: white;
 }
 
 .container {
     display: flex;
+}
 
+button {
+    font-size: medium;
+    margin-top: 20px;
+}
+
+.center {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-left: 110px;
+}
+
+h2 {
+    padding: 20px;
+    
 }
